Spot method updates
